Punto_5/maclaurin.g4
grammar Maclaurin;

// ─── PARSER ───
prog   : expr EOF ;
expr   : EXP '(' numero ',' n=ENTERO ')' ;
numero : SIGNO? (ENTERO | DECIMAL) ;

// ─── LÉXICO ───
EXP     : 'EXP' | 'exp' ;
DECIMAL : [0-9]+ '.' [0-9]+ ;
ENTERO  : [0-9]+ ;
SIGNO   : [+\-] ;
WS      : [ \t\n\r]+ -> skip ;
